Added a default error page when exceptions happen in the backend.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 exact.url = api.exactpaysandbox.com
 application.token = <add your application token here>
-account.id = 656e07dfc49fd49cd16468a0
+account.id = <add your merchant ID here>
+server.error.whitelabel.enabled=false
