Changes to make the app to work with CSIPayJS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-exact.url = api.exactpaysandbox.com
-application.token = <add your application token here>
-account.id = <add your merchant ID here>
+csipay.url = https://test-pyxisapi.csipay.com/PyxisMasterApi/api/
+security.token=<add Pyxis Security token here>
 server.error.whitelabel.enabled=false
+account.terminalId=<add your terminal ID here>
+account.paymentFlow=sale|tokenize
