Removed the values for some of the properties again

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ security.token=your-security-token-here
 account.terminalId=your-terminal-id-here
 account.paymentFlow=    
 # reCAPTCHA configuration
-google.recaptcha.secret=6LcXGw8rAAAAAOr1b2k3Z5g9d4e7F3a8b9c0d1e2f3g4h5i6j7k8l9m
+google.recaptcha.secret=
 recaptcha.site-key= 
 recaptcha.enabled=true
