Changes to handle card decline scenario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 csipay.url = https://test-pyxisapi.csipay.com/PyxisMasterApi/api/
-security.token=your-security-token-here
-account.terminalId=your-terminal-id-here
-account.paymentFlow=    
+security.token=
+account.terminalId=
+account.paymentFlow=sale
 # reCAPTCHA configuration
 google.recaptcha.secret=
-recaptcha.site-key= 
-recaptcha.enabled=true
+recaptcha.site-key=
+recaptcha.enabled=false
