Changes to support surcharging use case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-csipay.url = https://test-pyxisapi.csipay.com/PyxisMasterApi/api/
+# CSI Pay API Url
+csipay.url = https://staging-pyxisapi.csipay.com/PyxisMasterApi/api/
+# CSI Pay JS URL
+csipayjs.url=https://staging-pyxisapi.csipay.com/js/v1/csi_pay.js
 security.token=
 account.terminalId=
 account.paymentFlow=sale
