Added support for the tokenize from browser

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ csipay.url = https://staging-pyxisapi.csipay.com/PyxisMasterApi/api/
 # CSI Pay JS URL
 csipayjs.url=https://staging-pyxisapi.csipay.com/js/v1/csi_pay.js
 security.token=
-account.terminalId=
-account.paymentFlow=sale
+account.terminalId=8cb47ae4cb5c4c11b2e36b41b43aba58
+account.paymentFlow=sale|tokenize
 # reCAPTCHA configuration
 google.recaptcha.secret=
 recaptcha.site-key=
